--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-starter",
   "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "up": "knex migrate:up",
+    "down": "knex migrate:down"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
