--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-NUXT_PG_HOST=************.eu-central-1.aws.neon.tech
-NUXT_PG_DATABASE=neondb
-NUXT_PG_USER=
-NUXT_PG_PASSWORD=
-NUXT_ENDPOINT_ID=************
+PG_HOST=************.eu-central-1.aws.neon.tech
+PG_DATABASE=neondb
+PG_USER=
+PG_PASSWORD=
